Changed from A5 to A6 format (to more easily print 4-up on an A4 sheet to have better alignment of grain direction).

--- a/manuscript/commands.tex
+++ b/manuscript/commands.tex
@@ -2,7 +2,7 @@
 % ``Notation in Econometrics:
 % A Proposal for a Standard''
 % by Karim Abadir and Jan Magnus
-% Med et lite tillegg av Erik Ø. Sørensen: \defdas
+% Med et lite tillegg av Erik ï¿½. Sï¿½rensen: \defdas
 %
 \usepackage{amsfonts}
 %\usepackage{amssymb}
