Switched to stix2 fonts.

--- a/manuscript/notes.bib
+++ b/manuscript/notes.bib
@@ -1,7 +1,7 @@
 % Encoding: UTF-8
 
 @Article{Benjamin2017,
-  author  = {Benjamin, Daniel J and Berger, James O and Johannesson, Magnus and Nosek, Brian A and Wagenmakers, Eric-Jan and Berk, Richard and Bollen, Kenneth A and Brembs, Bj{\"o}rn and Brown, Lawrence and Camerer, Colin and others},
+  author  = {Benjamin, Daniel J. and Berger, James O. and Johannesson, Magnus and Nosek, Brian A. and Wagenmakers, Eric-Jan and Berk, Richard and Bollen, Kenneth A and Brembs, Bj{\"o}rn and Brown, Lawrence and Camerer, Colin and others},
   title   = {Redefine statistical significance},
   doi     = {10.1038/s41562-017-0189-z},
   pages   = {6--10},
