--- a/manuscript/notes.tex
+++ b/manuscript/notes.tex
@@ -1,8 +1,9 @@
-\documentclass{article}
+%!TEX program = xelatex 
+\documentclass[10pt]{article}
 \usepackage{geometry}
 \geometry{paperwidth=105mm,paperheight=148.5mm,margin=9mm,includeheadfoot}
 \usepackage{graphicx}
-\usepackage{stix}
+\usepackage{stix2}
 \usepackage{url}
 \usepackage{natbib}
 \usepackage{booktabs}
