--- a/manuscript/notes.tex
+++ b/manuscript/notes.tex
@@ -234,10 +234,10 @@ set of exercises for an example of this.
 
 
 \section{Random vectors}
-Given a sample space $\mathcal{C}$. Consider the
+Given a sample space $\mathcal{S}$. Consider the
 two random variables $X_1$ and $X_2$, which assign to each element
-$c$ of $\mathcal{C}$ an ordered pair of numbers
-$X_1(c)=x_1$, $X_2(c)=x_2$. Then we say that $(X_1,X_2)$ is a
+$s$ of $\mathcal{S}$ an ordered pair of numbers
+$X_1(s)=x_1$, $X_2(s)=x_2$. Then we say that $(X_1,X_2)$ is a
 \textbf{random vector}. 
 
 If $(X_1,X_2)$ has density $f_{X_1,X_2}(x_1,x_2)$, the \textbf{marginal density}
@@ -250,8 +250,8 @@ zero, and another way to determine conditional distribution is necessary. It
 turns out that if $(X_1,X_2)$ has a density, it is useful to define the
 \textbf{conditional density} of $X_1$ given $X_2$ as
 \[f_{X_1|X_2}(x_1|x_2)=\frac{f_{X_1,X_2}(x_1,x_2)}{f_{X_2}(x_2)},\quad \text{where $f_{X_2}(x_2)>0$}.\]
-With this conditional density, we can define
-the \textbf{conditional expectation} is $\E[X_2|X_1=x_1] = \int_{-\infty}^\infty s
+We can now define
+the \textbf{conditional expectation}, $\E[X_2|X_1=x_1] = \int_{-\infty}^\infty s
 f_{X_2|X_1}(s|x_1) \rd s$.
 
 For the completely general case (which we won't be working with), we require
@@ -314,14 +314,18 @@ or computational methods for $\widehat{\theta}$ as a function of the data $(x_1,
 An example: To estimate the expectation of $X$, choose $g(X;\mu)=X-\mu$.
 The solution is  $\widehat{\mu} = n^{-1}\sum X_i$,
 often written $\widehat{\mu}=\overline{X}_n$. 
+$\widehat{A}$ always mean the \textbf{estimate} of $A$, and is a number (or a vector of numbers). 
+The \emph{function} to calculate the estimate based on a random sample (data) is called 
+the \textbf{estimator}.  The parameter we aim to estimate is called the \textbf{estimand}.
+
 
 Similarly, for a simple regression model,
 \[ Y_i = \alpha + \beta X_i + \varepsilon_i,\] the core assumption is often that $\cov[\varepsilon_i,X_i]=0$.
 Reformulating, $\cov[Y_i - (\alpha + \beta X_i), X_i]$, or $\cov[Y_i,X_i] = \beta \var[X_i]$.
 The empirical analog of this is 
-\[ \widehat{\cov[X_i,Y_i]} = \widehat{\beta} \widehat{\var[X_i]},\]
-with the rule that $\widehat{A}$ always mean ``(the empirical) estimate of $A$.'' This equation
-is easily solved for $\widehat{\beta} = \widehat{\cov[X_i,Y_i]} / \widehat{\var[X_i]}$. To find
+\[ \widehat{\cov[X_i,Y_i]} = \widehat{\beta} \widehat{\var[X_i]}.\]
+This equation
+is easily solved for $\widehat{\beta} = \widehat{\cov[X_i,Y_i]} / \widehat{\var[X_i]}$.  To find
 $\widehat{\alpha}$ use the same kind of procedure for the theoretical moment $\E[\varepsilon_i]=0$. This kind
 of application of the analog principle is called \textbf{method of moments}. Note
 that in this regression case, the assumption $\cov[Y_i - (\alpha + \beta X_i), X_i]$ is equivalent
@@ -378,7 +382,7 @@ $p$-values.
 \textbf{P-values} are the probability of at least as extreme data given $H_0$,
 \[ P( \text{data}| H_0).\]
 $P$-values do not address the likelihood of $H_0$ being true.
-In the classical inference, probabilities are \emph{never} attached to hypotheses: Hypotheses are true 
+In classical inference, probabilities are \emph{never} attached to hypotheses: Hypotheses are true 
 or false, and this is not a sampling issue.
 If we want to be Bayesian about hypotheses (have beliefs about them), we need to incorporate the priors: 
 \[ P(H_0|\text{data}) = \frac{ P(\text{data}|H_0) P(H_0)}{ P(\text{data}) }. \]
@@ -396,7 +400,7 @@ t_n = \frac{\overline{X}_n - \mu_0}{\sigma/\sqrt{n}}.
 \]
 If we know $\sigma$, then $t_n$ would be normally distributed $N(0,1)$ under $H_0\!: E[X]=\mu_0$. 
 This would be true even in small samples.
-We can modify this most simple t-test in various ways.
+We can modify this most simple $t$-test in various ways.
 
 
 When we control the type-I error probability to $\alpha$ and the type-II error probability
@@ -438,7 +442,7 @@ the level of significance for our test (a type-I error). If we are at $H_{\!A}$,
 reject with probability $\gamma$, the power of the test. Rejecting $H_0$, the
 Bayesian posterior belief in $H_{\!A}$ is
 \begin{align*}
-   P(H_{\!A}|\mathrm{Reject} H_0) & = \frac{P(\mathrm{Reject} H_0|H_{\!A}) \cdot P(H_{\!A})}{P(\mathrm{Reject} H_0)} \\
+   P(H_{\!A}|\mathrm{Reject}\ H_0) & = \frac{P(\mathrm{Reject}\ H_0|H_{\!A}) \cdot P(H_{\!A})}{P(\mathrm{Reject}\ H_0)}, \\
    &= \frac{p\gamma}{(1-p)\alpha + p\gamma}.  
 \end{align*}
 
@@ -447,7 +451,7 @@ our posterior belief in $H_{\!A}$ should not be very strong: $0.1\cdot 0.5 /
 (0.9\cdot 0.05 + 0.1\cdot 0.5) = 0.53$. For this reason some people argue for a
 much stricter $\alpha$: \citet{Benjamin2017} argue that we should use
 $\alpha=0.005$ as a conventional level instead of $0.05$ (in this example, if we had
-the surprising result at $\alpha=0.005$, that would give us $P(H_{\!A}|\mathrm{Reject} H_0)=0.92$). 
+the surprising result at $\alpha=0.005$, that would give us $P(H_{\!A}|\mathrm{Reject}\ H_0)=0.92$). 
 
 \begin{figure}[tb]
   \begin{center}
