Rewritten to print nicer.

--- a/manuscript/notes.tex
+++ b/manuscript/notes.tex
@@ -302,7 +302,11 @@ known as a \textbf{random sample} of size $n$ of the variable $X$.
 \section{Estimation}
 
 For estimation, we would like to have some rules to uncover empirical analogs
-to theoretically defined parameters. The \textbf{analog principle} is to 
+to theoretically defined parameters. We will assume we have access to a
+random sample from some defined population (with dependency in data,
+we often start by a transforming data such that the transformed data
+is a random sample). 
+The \textbf{analog principle} is to 
 start with a theoretically defined parameter and set its
 empirical analog equal to the same in the sample. 
 \begin{align}
